# -rizz-app

./: .gitignore  README.md  RIZZ_PROJECT_SUMMARY.md  SPEC.md  vercel.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/services/: nim_service.py
backend/tests/: test_nim_service.py
keyboard_app/: README.md  pubspec.yaml  vercel.json
keyboard_app/android/app/: build.gradle.kts
keyboard_app/android/app/src/main/: AndroidManifest.xml
keyboard_app/ios/Runner/: Info.plist
keyboard_app/ios/Runner.xcodeproj/: project.pbxproj
keyboard_app/lib/: main.dart
keyboard_app/linux/: CMakeLists.txt
keyboard_app/linux/runner/: my_application.cc
keyboard_app/macos/Runner.xcodeproj/: project.pbxproj
keyboard_app/macos/Runner/Configs/: AppInfo.xcconfig
keyboard_app/test/: widget_test.dart
keyboard_app/web/: index.html
keyboard_app/windows/: CMakeLists.txt
keyboard_app/windows/runner/: Runner.rc
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/services/: api_service.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
